--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   animated: ^2.0.0
   http: ^0.13.5
+  url_launcher: ^6.1.9
 
 dev_dependencies:
   flutter_test:
