--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: paramanu
-description: Connectivity to the Internet's Wayback machine, finally here!
+name: Unbored
+description: When you feelin' bored, who you gonna call? Unbored-sters!
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
